--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   min-height: 100vh;
   margin: 10px;
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-image: url('pokeball.jpg');
 }
   
 header {
