--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   font-family: Arial, sans-serif;
   background-image: url('pokeball.jpg');
   background-attachment: fixed;
+  /*background-size: cover;
+  background-repeat: no-repeat;*/
 }
   
 header {
@@ -13,6 +15,11 @@ header {
   color: black;
   text-align: center;
   padding: 10px 0;
+}
+
+#logo {
+  width: 450px;
+  background-color: transparent;
 }
 
 h1 {
@@ -173,12 +180,18 @@ a.back-to-top {
   h1 {
     font-size: 40px;
   }
+
   nav ul {
     width: 200px;
   }
+
   main {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 8px;
+  }
+
+  #logo {
+    width: 300px;
   }
 
   .pokemon-card {
@@ -217,6 +230,10 @@ a.back-to-top {
 
   h1 {
     font-size: 30px;
+  }
+
+  #logo {
+    width: 300px;
   }
 
   main {
